crates/ink/tests/ui/contract/fail/constructor-return-result-invalid.stderr
error: ink! constructors must return Self or Result<Self>
  --> tests/ui/contract/fail/constructor-return-result-invalid.rs:14:33
   |
14 |         pub fn constructor() -> core::result::Result<u8, Error> {
   |                                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
